--- a/index.html
+++ b/index.html
@@ -4,30 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href=""><span>Web</span>Studio</a>
-            <ul>
-                <li>
-                    <a href="">Студия</a>
+    <header class="header">
+        <nav class="site-nav">
+            <a href="" class="logo"><span class="accent">Web</span>Studio</a>
+            <ul class="site-nav-list">
+                <li class="site-nav-item">
+                    <a href="" class="site-nav-link">Студия</a>
                 </li>
                 <li>
-                    <a href="">Портфолио</a>
+                    <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="" class="site-nav-link">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <address class="address">
+            <ul class="address-list">
+                <li class="address-item">
+                    <a href="mailto:info@devstudio.com" class="address-mail address-contact">info@devstudio.com</a>
                 </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="address-item">
+                    <a href="tel:+380961111111" class="address-phone address-contact">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
