--- a/index.html
+++ b/index.html
@@ -28,97 +28,95 @@
         <address class="address">
             <ul class="address-list">
                 <li class="address-item">
-                    <a href="mailto:info@devstudio.com" class="address-mail address-contact">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address-contact-info">info@devstudio.com</a>
                 </li>
                 <li class="address-item">
-                    <a href="tel:+380961111111" class="address-phone address-contact">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="address-contact-info">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
         <!-- Hero Section -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="modal-button">Заказать услугу</button>
         </section>
         <!-- Our Qualities -->
         <section>
-            <h2>Наши качества</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции</p>
+            <h2 class="visually-hidden">Наши качества</h2>
+            <ul class="qualities-list">
+                <li class="qualities-item">
+                    <h3 class="qualities-name">Внимание к деталям</h3>
+                    <p class="qualities-description">Идейные соображения, а также начало повседневной работы по формированию позиции</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="qualities-item">
+                    <h3 class="qualities-name">Пунктуальность</h3>
+                    <p class="qualities-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="qualities-item">
+                    <h3 class="qualities-name">Планирование</h3>
+                    <p class="qualities-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="qualities-item">
+                    <h3 class="qualities-name">Современные технологии</h3>
+                    <p class="qualities-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- What we do -->
         <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img src="./images/what-we-do/task1.jpg" alt="Разработчик пишет код" width="370" height="294">
+            <h2 class="title">Чем мы занимаемся</h2>
+            <ul class="experience-list">
+                <li class="experience-item">
+                    <img class="experience-img" src="./images/what-we-do/task1.jpg" alt="Разработчик пишет код" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/what-we-do/task2.jpg" alt="Разработчик создает мобильное приложение" width="370" height="294">
+                    <img class="experience-img" src="./images/what-we-do/task2.jpg" alt="Разработчик создает мобильное приложение" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/what-we-do/task3.jpg" alt="Дизайнер подбирает цвета" width="370" height="294">
+                    <img class="experience-img" src="./images/what-we-do/task3.jpg" alt="Дизайнер подбирает цвета" width="370" height="294">
                 </li>
             </ul>
         </section>
          <!-- Our team -->
          <section>
-             <h2>Наша команда</h2>
-             <ul>
-                 <li>
-                     <img src="./images/our-team/teammember1.jpg" alt="Игорь Демьяненко улыбается" width="270" height="260">
-                     <h3>Игорь Демьяненко</h3>
-                     <p lang="en">Product Designer</p>
+             <h2 class="title">Наша команда</h2>
+             <ul class="team-member-list">
+                 <li class="team-member-item">
+                     <img class="team-member-photo" src="./images/our-team/teammember1.jpg" alt="Игорь Демьяненко улыбается" width="270" height="260">
+                     <h3 class="team-member-name">Игорь Демьяненко</h3>
+                     <p class="team-member-position" lang="en">Product Designer</p>
                  </li>
-                <li>
-                    <img src="./images/our-team/teammember2.jpg" alt="Ольга Репина улыбается" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                <li class="team-member-item">
+                    <img class="team-member-photo" src="./images/our-team/teammember2.jpg" alt="Ольга Репина улыбается" width="270" height="260">
+                    <h3 class="team-member-name">Ольга Репина</h3>
+                    <p class="team-member-position" lang="en">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/our-team/teammember3.jpg" alt="Николай Тарасов улыбается" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                <li class="team-member-item">
+                    <img class="team-member-photo" src="./images/our-team/teammember3.jpg" alt="Николай Тарасов улыбается" width="270" height="260">
+                    <h3 class="team-member-name">Николай Тарасов</h3>
+                    <p class="team-member-position" lang="en">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/our-team/teammember4.jpg" alt="Михаил Ермаков улыбается" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                <li class="team-member-item">
+                    <img class="team-member-photo" src="./images/our-team/teammember4.jpg" alt="Михаил Ермаков улыбается" width="270" height="260">
+                    <h3 class="team-member-name">Михаил Ермаков</h3>
+                    <p class="team-member-position" lang="en">UI Designer</p>
                 </li>
              </ul>
          </section>
 
     </main>
     <footer>
-        <a href=""><span>Web</span>Studio</a>
-        <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/aAmABjS24zkNkCrHA" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+        <a class="logo" href=""><span class="accent">Web</span>Studio</a>
+        <address class="address">
+            <p class="address-place">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="address-list">
+                <li class="address-item">
+                    <a class="address-contact-info" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="address-contact-info" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
