--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body class="body">
+<body>
     <header class="header">
         <nav class="site-nav">
             <a href="" class="logo"><span class="accent">Web</span>Studio</a>
@@ -28,111 +28,113 @@
         <address class="address">
             <ul class="address-list">
                 <li class="address-item">
-                    <a href="mailto:info@devstudio.com" class="address-contact-info">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address-mail address-contact">info@devstudio.com</a>
                 </li>
                 <li class="address-item">
-                    <a href="tel:+380961111111" class="address-contact-info">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="address-phone address-contact">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
-        <section class="our-projects">
-            <h1 class="visually-hidden">Наши проекты</h1>
-            <ul class="filter-buttons-list">
-                <li class="filter-buttons-item">
-                    <button class="filter-button" type="button">Все</button>
+        <section>
+            <h1>Наши проекты</h1>
+            <ul>
+                <li>
+                    <button type="button">Все</button>
                 </li>
-                <li class="filter-buttons-item">
-                    <button class="filter-button" type="button">Веб-сайты</button>
+                <li>
+                    <button type="button">Веб-сайты</button>
                 </li>
-                <li class="filter-buttons-item">
-                    <button class="filter-button" type="button">Приложения</button>
+                <li>
+                    <button type="button">Приложения</button>
                 </li>
-                <li class="filter-buttons-item">
-                    <button class="filter-button" type="button">Дизайн</button>
+                <li>
+                    <button type="button">Дизайн</button>
                 </li>
-                <li class="filter-buttons-item">
-                    <button class="filter-button" type="button">Маркетинг</button>
+                <li>
+                    <button type="button">Маркетинг</button>
                 </li>
             </ul>
-            <ul class="projects-list">
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project1.jpg" alt="Ноутбук с открытым на нем сайтом" width="370" height="294">
-                        <h2 class="project-name">Технокряк</h2>
-                        <p class="project-type">Веб-сайты</p>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project1.jpg" alt="Ноутбук с открытым на нем сайтом" width="370" height="294">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайты</p>
                     </a> 
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project2.jpg" alt="Два баскетболиста играют" width="370" height="294">
-                        <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                        <p class="project-type">Дизайн</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project2.jpg" alt="Два баскетболиста играют" width="370" height="294">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
                     </a>       
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project3.jpg" alt="Логотип ресторана с рыбой на фоне" width="370" height="294">
-                        <h2 class="project-name">Ресторан Seafood</h2>
-                        <p class="project-type">Приложение</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project3.jpg" alt="Логотип ресторана с рыбой на фоне" width="370" height="294">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Приложение</p>
                     </a>   
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project4.jpg" alt="Полноразмерные наушники" width="370" height="294">
-                        <h2 class="project-name">Проект Prime</h2>
-                        <p class="project-type">Маркетинг</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project4.jpg" alt="Полноразмерные наушники" width="370" height="294">
+                        <h2>Проект Prime</h2>
+                        <p>Маркетинг</p>
                     </a>
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project5.jpg" alt="Белая и кремовая коробки" width="370" height="294">
-                        <h2 class="project-name">Проект Boxes</h2>
-                        <p class="project-type">Приложение</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project5.jpg" alt="Белая и кремовая коробки" width="370" height="294">
+                        <h2>Проект Boxes</h2>
+                        <p>Приложение</p>
                     </a>
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project6.jpg" alt="Imac c открытым на нем сайтом" width="370" height="294">
-                        <h2 class="project-name">Inspiration has no Borders</h2>
-                        <p class="project-type">Веб-сайт</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project6.jpg" alt="Imac c открытым на нем сайтом" width="370" height="294">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
                     </a>
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project7.jpg" alt="Открытая книга" width="370" height="294">
-                        <h2 class="project-name">Издание Limited Edition</h2>
-                        <p class="project-type">Дизайн</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project7.jpg" alt="Открытая книга" width="370" height="294">
+                        <h2>Издание Limited Edition</h2>
+                        <p>Дизайн</p>
                     </a>
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project8.jpg" alt="Бирка с надписью" width="370" height="294">
-                        <h2 class="project-name">Проект LAB</h2>
-                        <p class="project-type">Маркетинг</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project8.jpg" alt="Бирка с надписью" width="370" height="294">
+                        <h2>Проект LAB</h2>
+                        <p>Маркетинг</p>
                     </a>
                 </li>
-                <li class="project-item">
-                    <a class="project-link" href="">
-                        <img class="project-img" src="./images/our-projects/project9.jpg" alt="Человек использует приложение на ноутбуке" width="370" height="294">
-                        <h2 class="project-name">Growing Business</h2>
-                        <p class="project-type">Приложение</p>
+                <li>
+                    <a href="">
+                        <img src="./images/our-projects/project9.jpg" alt="Человек использует приложение на ноутбуке" width="370" height="294">
+                        <h2>Growing Business</h2>
+                        <p>Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a class="logo" href=""><span class="accent">Web</span>Studio</a>
-        <address class="address">
-            <p class="address-place">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="address-list">
-                <li class="address-item">
-                    <a class="address-contact-info" href="mailto:info@example.com">info@example.com</a>
+        <a href=""><span>Web</span>Studio</a>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://goo.gl/maps/aAmABjS24zkNkCrHA" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a class="address-contact-info" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
